# Logger

./: .gitignore  README.md  log.txt  main  main.cpp  test.cpp
logger2/: CMakeLists.txt  README.md  log.drawio
logger2/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists_8txt.html  annotated.html  classDateTimeFormatItem-members.html  classDateTimeFormatItem.html  classDateTimeFormatItem__coll__graph.map  classDateTimeFormatItem__coll__graph.md5  classElapseFormatItem-members.html  classElapseFormatItem.html  classElapseFormatItem__coll__graph.md5  classElapseFormatItem__inherit__graph.map  classFiberFormatItem-members.html  classFiberFormatItem.html  classFiberFormatItem__coll__graph.md5  classFiberFormatItem__inherit__graph.map  classFiberIdFormatItem-members.html  classFiberIdFormatItem.html  classFiberIdFormatItem__inherit__graph.map  classFiberIdFormatItem__inherit__graph.md5  classFileLogAppender-members.html  classFileLogAppender.html  classFileLogAppender__coll__graph.map  classFileLogAppender__coll__graph.md5  classFileNameFormatItem-members.html  classFileNameFormatItem.html  classFileNameFormatItem__coll__graph.md5  classFileNameFormatItem__inherit__graph.map  classLevelFormatItem-members.html  classLevelFormatItem.html  classLevelFormatItem__coll__graph.md5  classLevelFormatItem__inherit__graph.map  classLineFormatItem-members.html  classLineFormatItem.html  classLineFormatItem__coll__graph.map  classLineFormatItem__inherit__graph.md5  classLogAppender-members.html  classLogAppender.html  classLogAppender__coll__graph.map  (+142 more)
(+154 files in other folders)
